two-java-applications/kustomize/app03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app03
  template:
    metadata:
      labels:
        app: app03
    spec:
      containers:
        - name: app03
          image: app03:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
#          env:
#            - name: SPRING_PROFILES_ACTIVE
#              value: ""
