two-java-applications/kustomize/app03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app03-service
spec:
  selector:
    app: app03
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: LoadBalancer
