two-java-applications/kustomize/app03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app03-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /app03
            pathType: Prefix
            backend:
              service:
                name: app03-service
                port:
                  number: 80
